# routes/subscriptionRoutes.js
@@ -1,11 +1,12 @@
-var express = require('express');
-var router = express.Router();
-var subscriptionController = require('../controllers/subscriptionController.js');
+const express = require('express');
+const router = express.Router();
+const subscriptionController = require('../controllers/subscriptionController');
+const passportManager = require('../helpers/passport');
 
-router.get('/startSubscriptionSync', subscriptionController.startSubscriptionSync);
-router.get('/stopSubscriptionSync', subscriptionController.stopSubscriptionSync);
-router.get('/getSubscription/:zohoSubscriptionId', subscriptionController.getSubscription);
-router.get('/renewZohoSubscription/:zohoSubscriptionId', subscriptionController.renewZohoSubscription);
-router.get('/verifyZohoSubscription/:zohoSubscriptionId', subscriptionController.verifyZohoSubscription);
+router.get('/sync/start', passportManager.authenticate, subscriptionController.startSubscriptionSync);
+router.get('/sync/stop', passportManager.authenticate, subscriptionController.stopSubscriptionSync);
+router.get('/:zohoSubscriptionId', passportManager.authenticate, subscriptionController.getSubscription);
+router.get('/:zohoSubscriptionId/renew', passportManager.authenticate, subscriptionController.renewZohoSubscription);
+router.get('/:zohoSubscriptionId/verify', subscriptionController.verifyZohoSubscription);
 
 module.exports = router;
